@@ -49,3 +49,4 @@ May:
     - Interface improvements
     - Also show parameter in done-mode (status 2)
     - Added fancy table with pagination support for input/output files and project list
+    - Uploads now proceed through AJAX, major interface improvements
